<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="26dp"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginBottom="32dp">

        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/rounded"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_close" />

        </RelativeLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:src="@drawable/profile"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        style="@style/Text.Medium"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <TextView
        style="@style/Text.Regular"
        android:text="@string/email"
        android:textSize="12sp"
        android:textColor="@color/secondary"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <TextView
        style="@style/Text.ExtraBold"
        android:text="@string/about_me"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:layout_marginBottom="20dp"/>

    <TextView
        style="@style/Text.Medium"
        android:text="@string/bio"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginBottom="56dp"/>

    <TextView
        style="@style/Text.ExtraBold"
        android:text="@string/let_s_connect"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:layout_marginBottom="14dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/Text.Bold"
        android:background="@drawable/btn_primary"
        android:text="@string/linkedin"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"/>


</LinearLayout>