<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingTop="32dp"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    android:paddingBottom="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/about_page"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Text.Bold"
                    android:layout_marginEnd="8dp"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    style="@style/Text.Regular"
                    android:text="@string/software_engineer"
                    android:textColor="@color/secondary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/Text.Bold"
            android:layout_marginBottom="40dp"
            android:text="@string/my_works"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_works"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_list"
            android:contentDescription="@string/list_of_my_works"/>

    </LinearLayout>

</ScrollView>