<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingBottom="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/rounded"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_close" />

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_photo"
            android:layout_marginTop="46dp"
            android:layout_width="match_parent"
            android:layout_height="274dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/thumbnail"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Text.Bold"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/Text.Regular"
            android:layout_gravity="start"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="gravity"/>
    </LinearLayout>

</ScrollView>